#-----------------------------------------------------------------------
# AAConsole
#-----------------------------------------------------------------------
cmake_minimum_required(VERSION 2.8)
project (AAConsole CXX)

#-----------------------------------------------------------------------
# Sub Directory
#-----------------------------------------------------------------------
add_subdirectory(aa_console)
add_subdirectory(sample_aa_console)
